[package]
name = "rn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = {version="4.5.4",  features=["derive"]}
fern = {version="0.6.2", features=["chrono", "colored"]}
humantime = "2.1.0"
log = "0.4.21"
regex = "1.10.4"
